[gd_scene load_steps=2 format=3 uid="uid://cj7daxvjfmrd"]

[ext_resource type="Script" uid="uid://bqv63n06j76u5" path="res://settings_menu/components/screen_space_indirect_lighting.gd" id="1_lv3hg"]

[node name="ScreenSpaceIndirectLighting" type="GridContainer"]
editor_description = "Allow toggling Screen-space Indirect Lighting (SSIL) and its quality levels."
offset_right = 199.0
offset_bottom = 66.0
columns = 2
script = ExtResource("1_lv3hg")

[node name="SSILLabel" type="Label" parent="."]
layout_mode = 2
text = "SSIL"

[node name="SSILOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="SSILQualityLabel" type="Label" parent="."]
layout_mode = 2
text = "SSIL Quality"

[node name="SSILQualityOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Very Low"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Ultra"
popup/item_4/id = 4

[connection signal="item_selected" from="SSILOptions" to="." method="_on_ssil_options_item_selected"]
[connection signal="item_selected" from="SSILQualityOptions" to="." method="_on_ssil_quality_options_item_selected"]
